<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_account_popup_bg"
    tools:context=".EditFirstNamePopupActivity">


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_prompt"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/acceptFirstNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:onClick="acceptFirstNameEdit"
        android:text="@string/accept"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <Button
        android:id="@+id/acceptLastNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#85FF0B0B"
        android:onClick="cancelFirstNameEdit"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>